# esp32c3-infrared-mqtt

./: .env-example  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
.cargo/: config
src/: config.rs  main.rs  pins.rs  tiny_mqtt.rs
