[package]
name = "lilygo"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv-rt = { version = "0.11.0" }
riscv = "0.10.1"
#esp-riscv-rt = { version = "0.1.0"}

embedded-svc = { version = "0.23.0", default-features = false}
log = "0.4.16"
nb = "1.0.0"
embedded-hal = "0.2"
esp-println = { version = "0.3.1", features = ["esp32c3", "uart", "log"] }
esp-backtrace     = { version = "0.4.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }


mqttrust = "0.6.0"
critical-section = "1.1.0"
infrared = { path = "../infrared" }
heapless = "0.7.16"
embedded-io = "0.4.0"
const-str = "0.5.3"

[dependencies.esp32c3-hal]
version = "0.5.0"

[dependencies.smoltcp]
version = "0.8.2"
default-features = false
features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"]

[dependencies.esp-wifi]
#path = "../esp-wifi"
git = "https://github.com/esp-rs/esp-wifi"
rev = "05665bc2e68a288fb7461175e4b82c5f6938b1ba"
features = ["esp32c3", "embedded-svc", "wifi"]

[build-dependencies]
dotenv = "0.15.0"

[profile.dev]
opt-level = 1