[package]
name = "lilygo"
version = "0.1.0"
edition = "2021"

[dependencies]
esp32c3-hal = "0.8.0"
log = "0.4.16"
embedded-hal = "0.2"
esp-println = { version = "0.4.0", features = ["esp32c3", "uart", "log"] }
esp-backtrace = { version = "0.6.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
critical-section = "1.1.0"
embedded-svc = { version = "0.23.0", default-features = false}
embedded-io = "0.4.0"

mqttrust = "0.6.0"
infrared = "0.14.2"
heapless = "0.7.16"
const-str = "0.5.3"

[dependencies.smoltcp]
version = "0.9.1"
default-features = false
features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"]

[dependencies.esp-wifi]
git = "https://github.com/esp-rs/esp-wifi"
rev = "74e9f182ddd3c978b7ad4e86801da0811c4d1aa5"
features = ["esp32c3", "embedded-svc", "wifi"]

[build-dependencies]
dotenv = "0.15.0"

[profile.dev]
opt-level = 1